# gossip

./: CMakeLists.txt  HitMatrix.cc  HitMatrix.cpp  HitMatrix.h  HitMatrix.hh  LICENSE  LinkDef.h  Makefile  PhotonList.cc  PhotonList.hh  PhotonSource.cc  PhotonSource.hh  README  README.md  SiPM_GUI.cpp  SiPM_GUI.h  SiPM_MC.cpp  SiPM_MC.h  daqMC.cc  daqMC.hh  drTDCspec.h  drTDCspec2.h  gossip.cpp  install.sh  main.cc  main.cpp  sipmGUI.cc  sipmGUI.hh  sipmMC.cc  sipmMC.hh  tpTDCspec.h
cmake/: gossipConfig.cmake.in  gossipConfig.h.in  gossipConfigVersion.cmake.in
examples/G4example01/: GNUmakefile  GossipEx01.cc  README  README.md  processGossipOutput.cpp  processPhotonOutput.cpp  run1.mac  vis.mac
examples/G4example01/include/: Ex01DetectorConstruction.hh  Ex01EventAction.hh  Ex01PhysicsList.hh  Ex01PrimaryGeneratorAction.hh  Ex01RunAction.hh  Ex01ScintillatorHit.hh  Ex01ScintillatorSD.hh  Ex01SteppingAction.hh  SiPM.hh  SiPMHit.hh  SiPMMessenger.hh  SiPMSD.hh
examples/G4example01/input/: MPPC_3x3.txt  SiData.root  SpectralSensitivity.root
examples/G4example01/src/: Ex01DetectorConstruction.cc  Ex01EventAction.cc  Ex01PhysicsList.cc  Ex01PrimaryGeneratorAction.cc  Ex01RunAction.cc  Ex01ScintillatorHit.cc  Ex01ScintillatorSD.cc  Ex01SteppingAction.cc  SiPM.cc  SiPMHit.cc  SiPMMessenger.cc  SiPMSD.cc
examples/example1/: CMakeLists.txt  Makefile  Parameters.txt  README  README.md  example1.cpp
examples/example1/input/: Parameters.txt
examples/example1/src/: example1.cpp
include/: AvalancheList.h  BasicDAQ.h  GUI.h  HitMatrix.h  HitMatrix.hh  LinkDef.h  PhotonList.h  PhotonList.hh  PhotonSource.h  PhotonSource.hh  SiPM.h  Waveform.h  daqMC.h  daqMC.hh  gglobals.h  gossipGUI.h  sipmGUI.hh  sipmMC.h
include/Digitizers/: Oscilloscope.h  QDC.h  VDigitizer.h
include/Digitizers/Filters/: BWFilters.h
manuals/getting_started/: getting_started.tex  header.tex
src/: AvalancheList.cpp  BasicDAQ.cpp  Dict.cxx  Dict.h  GUI.cpp  HitMatrix.cpp  PhotonList.cc  PhotonList.cpp  PhotonSource.cc  PhotonSource.cpp  SiPM.cpp  Waveform.cpp  daqMC.cc  daqMC.cpp  gossipGUI.cpp  sipmGUI.cc  sipmMC.cpp
src/Digitizers/: Oscilloscope.cpp  QDC.cpp  VDigitizer.cpp
src/Digitizers/Filters/: BWFilters.cpp  liir.c  liir.cpp
